# ppa_properties-cpp

./: .bintray.json.in  .travis.yml  README
debian/: control  rules
tests/: CMakeLists.txt
